--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 !**/src/main/resources/application.properties
+/src/main/resources/application.properties
 ### STS ###
 .apt_generated
 .classpath
