--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+#spring.datasource.username=root
+#spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://root:GBIhPMn6OPBvfyWJy5s0@containers-us-west-62.railway.app:7533/railway
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=GBIhPMn6OPBvfyWJy5s0
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
