--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:${MYSQL_PORT:3306}/ecommerce
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:admin}
-#spring.datasource.url=jdbc:mysql://root:GBIhPMn6OPBvfyWJy5s0@containers-us-west-62.railway.app:7533/railway
-#spring.datasource.username=root
-#spring.datasource.password=GBIhPMn6OPBvfyWJy5s0
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:${MYSQL_PORT:3306}/ecommerce
+#spring.datasource.username=${MYSQL_USER:root}
+#spring.datasource.password=${MYSQL_PASSWORD:admin}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:buzxi74vnjtvqtbpc83c-mysql.services.clever-cloud.com}:${MYSQL_PORT:3306}/buzxi74vnjtvqtbpc83c
+spring.datasource.username=${MYSQL_USER:ugxxf6oafqjuynzj}
+spring.datasource.password=${MYSQL_PASSWORD:a5MbwtaaH1plnk59mnTb}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
