--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:${MYSQL_PORT:3306}/ecommerce
 #spring.datasource.username=${MYSQL_USER:root}
 #spring.datasource.password=${MYSQL_PASSWORD:admin}
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:buzxi74vnjtvqtbpc83c-mysql.services.clever-cloud.com}:${MYSQL_PORT:3306}/buzxi74vnjtvqtbpc83c
-spring.datasource.username=${MYSQL_USER:ugxxf6oafqjuynzj}
-spring.datasource.password=${MYSQL_PASSWORD:a5MbwtaaH1plnk59mnTb}
+spring.datasource.url=jdbc:postgresql://${MYSQL_HOST:dpg-ck283nfqj8ts73flpsmg-a.oregon-postgres.render.com}:${MYSQL_PORT:5432}/depot_2wvh
+spring.datasource.username=${MYSQL_USER:admin}
+spring.datasource.password=${MYSQL_PASSWORD:5rzDnnfBrSRpam4vKlwpkBjY9xUQytxt}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
